--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -2,43 +2,43 @@
 
 .landing-gate {
   background-color: #ffffff;
-  border-radius: 10px;
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.03);
   box-sizing: border-box;
-  margin: 2rem auto 0;
-  padding: 1rem;
+  margin: 0 auto 0;
+  padding: 3rem 2.5rem;
   width: 100%;
 
   @media screen and (min-width: $breakpoint-md) {
+    border-radius: 10px;
+    margin: 2rem auto 0;
     width: 500px;
   }
 }
 
 .logo {
+  background-color: white;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.03);
   display: flex;
   justify-content: center;
   overflow: visible;
+  position: relative;
   width: 100%;
 
   &__image {
-    background-color: white;
-    border-radius: 28px;
-    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.03);
-    height: 100px;
-    padding: 0.5rem;
-    overflow: visible;
+    height: 80px;
+    padding: 1.5rem;
     width: 100px;
   }
 }
 
 .notes-app {
   background-color: #fff;
-  border-radius: 10px;
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.03);
   box-sizing: border-box;
   display: flex;
   flex-flow: column;
-  margin: 2rem auto 0;
+  margin: 0 auto 0;
+  min-height: 600px;
   overflow: hidden;
   width: 100%;
 
@@ -66,6 +66,8 @@
   }
 
   @media screen and (min-width: $breakpoint-lg) {
+    border-radius: 10px;
+    margin: 2rem auto 0;
     width: 1200px;
   }
 }
