--- a/client/src/components/notes.scss
+++ b/client/src/components/notes.scss
@@ -1,6 +1,7 @@
 .notes {
   &__editing {
     background-color: #fafcff;
+    border-radius: 15px;
     margin-top: 2rem;
     padding: 1rem;
   }
