--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,6 +4,8 @@ body {
   background-color: #eff5ff;
   color: #002966;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 button {
@@ -44,6 +46,12 @@ button {
 }
 
 input {
-  padding: 0.3rem 0.5rem;
-  margin: 0 0.2rem 0 0;
+  box-sizing: border-box;
+  padding: 0.45rem 0.7rem;
+  margin: 0 0.2rem 0.5rem 0;
+  border-color: #ccc;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 23px;
+  width: 100%;
 }
